# open-moe-trainer-lab

./: .dockerignore  .editorconfig  .env.example  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .pylintrc  .releaserc.json  .secrets.baseline  .yamllint.yml  =2.0.0  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  BACKLOG.md  BREAKTHROUGH_RESEARCH_PUBLICATION_READY.md  CHANGELOG.md  CHECKPOINTED_SDLC_IMPLEMENTATION_COMPLETE.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.production  FINAL_ACTIVATION_GUIDE.md  FINAL_QUALITY_GATES_REPORT.md  FINAL_TERRAGON_EXECUTION_SUMMARY.md  GITHUB_WORKFLOWS_SETUP.md  Makefile  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  README.md  REPOSITORY_CONFIGURATION.md  SDLC_ENHANCEMENT_SUMMARY.md  SECURITY.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION_REPORT.md  TERRAGON_SDLC_COMPLETION_REPORT.md  WORKFLOW_SETUP_REQUIRED.md  advanced_security_scanner.py  autonomous_production_deployment.py  (+73 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  project-metrics.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml.template  release.yml  release.yml.template
.terragon/: autonomous_sdlc.py  perpetual_executor.py  setup_autonomous_sdlc.sh  value-config.yaml  value_discovery_simple.py
deployment/: build.sh  deploy.sh  deploy_production.sh  health-check.sh  rollback.sh
deployment/production/: Dockerfile.optimized  docker-compose.prod.yml  docker-compose.production.yml  nginx.conf
deployment/production/kubernetes/: hpa.yaml  ingress.yaml  moe-api-deployment.yaml  moe-cluster.yaml  moe-gpu-deployment.yaml  namespace.yaml  storage.yaml
docs/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  FINAL_INTEGRATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  ROADMAP.md  SDLC_STATUS.md  SETUP_REQUIRED.md  WORKFLOW_DEPLOYMENT_GUIDE.md  monitoring.md
docs/adr/: 001-framework-selection.md  002-routing-algorithm-architecture.md  003-distributed-training-strategy.md
docs/guides/: README.md
docs/research/: literature_review.md  novel_algorithms.md
docs/runbooks/: monitoring-playbook.md
docs/workflows/: ADVANCED_SECURITY_WORKFLOWS.md  README.md  REQUIREMENTS.md
docs/workflows/examples/: ci.yml  performance.yml  release.yml  security.yml
examples/: basic_moe_demo.py  basic_training.py  generation1_simple_analytics.py  generation2_robust_demo.py  generation2_robust_validation.py  generation3_comprehensive_demo.py  generation3_optimized_scaling.py  generation3_scaling_demo.py  inference_optimization.py  production_deployment.py  research_breakthrough_demo.py  research_conceptual_demo.py  research_experiments.py  research_experiments_demo.py  research_experiments_results.json  research_report.json  research_simple_demo.py  research_validation.py  research_validation_results.json  robust_moe_demo.py  scalable_moe_demo.py  simple_moe_working.py  validation_report.json
examples/config_templates/: inference_config.json  production_config.yaml  training_config.yaml
kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml
moe_lab/: __init__.py  cli.py  self_improvement.py
moe_lab/analytics/: __init__.py  analyzer.py  cost.py  monitor.py
moe_lab/data/: __init__.py  collators.py  datasets.py  preprocessors.py
moe_lab/distributed/: __init__.py  communication.py  distributed_trainer.py  scaling_manager.py
moe_lab/inference/: __init__.py  caching.py  optimized.py
moe_lab/models/: __init__.py  architectures.py  expert.py  moe_model.py  router.py
moe_lab/monitoring/: __init__.py  advanced_monitoring.py  error_handler.py  health_monitor.py
moe_lab/optimization/: __init__.py  adaptive_routing.py  advanced_optimizers.py  advanced_performance_optimizer.py  auto_scaling.py  compiler.py  efficient_training.py  performance_optimizer.py
moe_lab/research/: __init__.py  ablation_studies.py  advanced_analytics.py  baseline_comparisons.py  breakthrough_algorithms.py  experimental_framework.py  experimental_routers.py  novel_algorithms.py
moe_lab/security/: advanced_security.py
moe_lab/serving/: __init__.py  distributed_server.py  server.py
moe_lab/training/: __init__.py  distributed.py  trainer.py
moe_lab/utils/: __init__.py  error_handling.py  logging.py  monitoring.py  optimization.py  robust_error_handling.py  validation.py
moe_lab/validation/: __init__.py  model_validator.py  routing_validator.py  training_validator.py
monitoring/: docker-compose.monitoring.yml  health-check.py  moe-dashboard.json  prometheus.yml  promtail-config.yml
monitoring/alertmanager/: config.yml
monitoring/rules/: alerts.yml
research_conceptual_results/: conceptual_demo_report.json
research_results/: executive_summary.json  publication_results.json  research_benchmark_report.json
research_validation_results/: breakthrough_algorithms_analysis.json  breakthrough_research_comprehensive_report.md  research_statistics.json
robust_checkpoints/: checkpoint_step_10.json  checkpoint_step_15.json  checkpoint_step_20.json  checkpoint_step_40.json  checkpoint_step_5.json
scripts/: automation_helper.py  build.sh  collect_metrics.py  deploy.sh  deploy_production.sh  performance_optimizer.py  quality_gates.py  release.py  setup_development.py
security/: advanced-security-scan.py  bandit.yml  compliance-report.py  generate-sbom.py
security/policies/: data-governance.md
security/scripts/: security-scan.sh
tests/: README.md  __init__.py  conftest.py  test_quality_gates.py  utils.py
tests/benchmarks/: test_performance.py
tests/comprehensive/: test_complete_pipeline.py  test_quality_gates.py
tests/distributed/: test_parallel_training.py
tests/e2e/: test_full_training_pipeline.py
tests/fixtures/: sample_data.py
tests/integration/: test_training_pipeline.py
tests/performance/: pytest.ini  test_training_performance.py
tests/unit/: test_routing.py
(+9 files in other folders)
